--- a/index.html
+++ b/index.html
@@ -378,6 +378,17 @@
         <p>&copy; Copyright woof enterprise 1997-2024</p>
       </div>
     </footer>
+    <div class="sticky-main">
+      <div class="sticky-header">
+        <div>
+          <a>Store</a>
+        </div>
+        <div>
+          <a>Home</a>
+        </div>
+        <div><a>Faq</a></div>
+      </div>
+    </div>
   </body>
   <script src="domManipulation.js"></script>
 </html>
