--- a/store.html
+++ b/store.html
@@ -10,7 +10,7 @@
   <body>
     <div class="Store-items">
       <div class="item">
-        <div class="store-item-image"><img src="/img/karsten-winegeart-NE0XGVKTmcA-unsplash.jpg" /></div>
+        <div class="store-item-image"><img src="/img/karsten-winegeart-NE0XGVKTmcA-unsplash (1).jpg" /></div>
         <div class="store-item-name">
           
           <div class="dog-name">Rotweiller</div>
